# master-thesis

./: iridia_tracking_system.cpp
C++ Controllers/: CMakeLists.txt  frontal_barrier.cpp  frontal_barrier.h  frontal_barrier_human_oc.cpp  frontal_barrier_human_oc.h  frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera.argos  frontal_barrier_static.cpp  frontal_barrier_static.h
C++ Controllers/1 Added danger colour and blocking/loop_functions/: CMakeLists.txt  frontal_barrier_lp.h
C++ Controllers/2 Changed colour management/: frontal_barrier_human_oc.cpp  frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera.argos
C++ Controllers/4 Before new computer/: frontal_barrier_human_oc.h
C++ Controllers/4 Before new computer/loop_functions/: frontal_barrier_lp.cpp
C++ Controllers/5 Before blinking LEDs and gravity activation/: frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera.xml  frontal_barrier_omnidirectional_camera_FOR_SIMULATIONS.xml
C++ Controllers/5 Before blinking LEDs and gravity activation/loop_functions/: frontal_barrier_lp.cpp  frontal_barrier_lp.h
C++ Controllers/6 Before end of master thesis/: CMakeLists.txt  frontal_barrier_human_oc.cpp
C++ Controllers/7 Current/: frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera_ATS.xml  frontal_barrier_omnidirectional_camera_ATS_SIMU.xml
C++ Controllers/Added danger colour and blocking/: frontal_barrier_human_oc.h  frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera.argos
C++ Controllers/Added danger colour and blocking/loop_functions/: frontal_barrier_lp.cpp
C++ Controllers/Current/: CMakeLists.txt  frontal_barrier_oc.cpp  frontal_barrier_oc.h  frontal_barrier_omnidirectional_camera.argos  frontal_barrier_omnidirectional_camera.xml  frontal_barrier_omnidirectional_camera_ATS.xml  omnidirectional_camera_sensor.xml
Configurations/: frontal_barrier.argos  frontal_barrier_RAB_lua.argos  frontal_barrier_omnidirectional_camera.argos  halfCircle.argos  halfCircleFootbots.argos  pattern_formation.argos  test0.argos
Lua Controllers/: controllerWithOmnidirectionalCamera_Moving.lua  controllerWithOmnidirectionalCamera_Static.lua  controllerWithRAB_Both.lua  controllerWithRAB_Moving.lua  controllerWithRAB_Static.lua  halfCircleStaticEpucks.lua  halfCircleStaticEpucksFootbot.lua  test0.lua  test1.lua
MATLAB/: createErrorMatrices.m  density.m  distance.m  experiment.txt  geo1.txt  geo10.txt  geo10_corrected.txt  geo11.txt  geo11_corrected.txt  geo12.txt  geo12_corrected.txt  geo13.txt  geo14.txt  geo14_corrected.txt  geo15.txt  geo16.txt  geo16_corrected.txt  geo2.txt  geo3.txt  geo4.txt  geo4_corrected.txt  geo5.txt  geo6.txt  geo6_corrected.txt  geo7.txt  geo8.txt  geo8_corrected.txt  geo9.txt  geo9_corrected.txt  geof1_corrected.txt  geof2_corrected.txt  geof3_corrected.txt  geof4_corrected.txt  geof6_corrected.txt  geof7_corrected.txt  geof8_corrected.txt  geof9_corrected.txt  geolong.txt  geolong_corrected.txt  loadData.m  (+46 more)
Thesis Document/: Cut state of the art.txt  main.tex  thesis.bib
Thesis Document/Article/: Text.docx  bare_jrnl_compsoc.tex
Thesis Document/figures/: changing_distance.tex  circuit.graffle  demo_setup.tex  gravity.tex  human.tex  metric_density.tex  metric_distance.tex  obstacleAvoidance.tex  prevention.tex  shoe_range.tex  theProblem.tex  unblocking.tex
scripts/: config_ID.sh  controllers_ID.sh  key_ID.sh  oc_calibration_ID.sh  upload.sh
